--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Weslene Uy
-logo: "/images/unnamed4.jpg?raw=true" # your photo (or logo) here
+logo: "/images/unnamed.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Master of City Planning '22  
   <br><br>
