--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,8 @@
 title: Weslene Uy
 logo: "/images/unnamed.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Master of City Planning '22  
+  Master of City Planning '22
+  University of Pennsylvania
   <br><br>
   <a href="https://www.linkedin.com/in/weslene-uy/">View My LinkedIn Profile</a> 
   
