--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,13 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br><br>
   University of Pennsylvania
   <br><br>
-  <a href="https://www.linkedin.com/in/weslene-uy/">View My LinkedIn Profile</a> 
+  
+  <p align="center">
+  <a href="pdf/Resume.pdf">Resume</a> |
+  <a href="https://www.linkedin.com/in/weslene-uy/">LinkedIn</a>
+  </p>
+   
+  <p align="justify">
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
