--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,16 @@
-title: Weslene Uy
-logo: "/images/unnamed.jpg?raw=true" # your photo (or logo) here
+title: Weslene Uy # your name (or website title) here
+
+logo: "images/unnamed.jpg" # your photo (or logo) here
+
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Master of City Planning '22
-  <br><br>
-  University of Pennsylvania
-  <br><br>
-  
   <p align="center">
   <a href="pdf/Resume.pdf">Resume</a> |
-  <a href="https://www.linkedin.com/in/weslene-uy/">LinkedIn</a>
+  <a href="https://www.linkedin.com/in/weslene-uy/">LinkedIn</a> 
   </p>
    
   <p align="justify">
-  
+   Masters of City Planning at UPenn, Expected Graduation: May 2022
+  <br><br>
+  </p>
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
