--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,18 @@
-title: Weslene Uy # your name (or website title) here
+title: <p align="center"> Weslene Uy </p>
 
 logo: "images/unnamed.jpg" # your photo (or logo) here
 
 description: > # your text below (remove <br> elements if you don't need line breaks)
   <p align="center">
   <a href="pdf/Resume.pdf">Resume</a> |
-  <a href="https://www.linkedin.com/in/weslene-uy/">LinkedIn</a>|
-  <a href="https://github.com/wesleneuy">G</a> 
+  <a href="https://www.linkedin.com/in/weslene-uy/">LinkedIn</a>
   </p>
    
   <p align="justify">
-   Masters of City Planning '22 at the University of Pennsylvania
+  Masters of City Planning '22 at the University of Pennsylvania
   <br><br>
+  My interests lie in using data visualization and analytics to identify spatial patterns and create compelling stories specifically around urban policies, affordable housing,
+  gentrification, and racial justice. 
   </p>
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
