--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ logo: "images/unnamed.jpg" # your photo (or logo) here
 
 description: > # your text below (remove <br> elements if you don't need line breaks)
   <p align="center">
-  <a href="pdf/Resume.pdf">Resume</a> |
+  <a href="pdf/Resume_March_2022.pdf">Resume</a> |
   <a href="https://www.linkedin.com/in/weslene-uy/">LinkedIn</a>
   </p>
    
