--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ description: > # your text below (remove <br> elements if you don't need line br
   </p>
    
   <p align="justify">
-  Masters of City Planning '22 at the University of Pennsylvania
+  Master of City Planning '22 at the University of Pennsylvania
   <br><br>
   <br><br>
   <br><br>
